# cat_breeds

./: .dockerignore  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
cat_breeds/: __init__.py  cat_breed_qa.py  cat_data_processor.py  cat_image_generator.py  clip_matcher.py
cat_breeds/utils/: utils.py
data/: breed_data.json  cat_data.csv
db/: chroma.sqlite3
notebooks/: README.md  cat_breeds_capstone_final.ipynb
src/: app.py
src/app/: __init__.py  app.py  logic.py  ui_helpers.py
src/cat_breeds/: __init__.py  cat_breed_qa.py  cat_data_processor.py  cat_image_generator.py  clip.py  clip_matcher.py  create_chroma_embeddings.py  embed.py  gemini.py  infer.py  infer_breed.py  qa.py  run_infer_breed.py
src/cat_breeds/utils/: embedding_functions.py  utils.py
